<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/recipe_card_view"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_margin="8dp"
            android:id="@+id/tv_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
        <TextView
            android:layout_margin="8dp"
            android:id="@+id/tv_recipe_serving"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>

</android.support.v7.widget.CardView>